public/app/scss/_bootstrap-override.scss
/* ... */
.alert-dismissible .close{
  position: static;
  color: $close-color;

}


//
// Popovers

.popover{
  border: none;
  @include box-shadow(none);
}

.popover-content {
  padding: 20px;
}

//
// Modals
// --------------------------------------------------

// z-index fix. modal doesn't show up properly when .content-wrap is relative
.modal-open{
  &, &.nav-collapsed, &.nav-static{
    .content-wrap{
      -webkit-transform: none;
      -ms-transform: none;
      transform: none;
      position: static;
    }

    .sidebar{
      z-index: -1;
    }
  }
}

.modal {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 10000;
  display: none;
  overflow: hidden;
  // Prevent Chrome on Windows from adding a focus outline. For details, see
  // https://github.com/twbs/bootstrap/pull/10951.
  outline: 0;
}

//
// Pagination
// --------------------------------------------------

.pagination{
  font-weight: $font-weight-normal;

  > .page-item {
    display: inline; // Remove list-style and block-level defaults
    > .page-link,
    > span{
      border-radius: $border-radius;
      margin: 0 2px;
    }

    >.page-link {
      text-decoration: none;
      border: none;
    }
  }
}

.pagination{
  font-weight: $font-weight-normal;

  > li {
    display: inline; // Remove list-style and block-level defaults
    > a,
    > span{
      border-radius: $border-radius;
      margin: 0 2px;
    }

    > a {
      text-decoration: none;
      border: none;
    }
  }
}

//
// Jumbotron
// --------------------------------------------------

.jumbotron {
  @include media-breakpoint-up(md){
    padding-left: $jumbotron-padding;
    padding-right: $jumbotron-padding;
  }
}


// Navbar form
//
// Extension of the `.form-inline` with some extra flavor for optimum display in
// our navbars.

.navbar-form {
  padding: 6px 0 6px $navbar-padding-x;

  .form-group {
    margin-bottom: 0;
  }

  // Undo 100% width for pull classes
  @media (min-width: map_get($grid-breakpoints, md)) {
    width: auto;
    border: 0;
    margin-left: 0;
    margin-right: 0;
  }
}

//
// Navbar Dasboard
// --------------------------------------------------

.navbar-dashboard {
  background-color: $navbar-dashboard-bg;
  border-color: $navbar-dashboard-border;

  .navbar-brand {
    color: $navbar-dashboard-brand-color;
    margin-right: 0;
    padding-top: 10px;
    font-size: $font-size-lg;
    &:hover,
    &:focus {
      color: $navbar-dashboard-brand-hover-color;
      background-color: $navbar-dashboard-brand-hover-bg;
    }
  }

  .navbar-text {
    color: $navbar-dashboard-color;
  }

  .navbar-nav {
    > li > a {
      color: $navbar-dashboard-link-color;

      &:hover,
      &:focus {
        color: $navbar-dashboard-link-hover-color;
        background-color: $navbar-dashboard-link-hover-bg;
      }
    }
    > .active > a {
      &,
      &:hover,
      &:focus {
        color: $navbar-dashboard-link-active-color;
        background-color: $navbar-dashboard-link-active-bg;
      }
    }
    > .disabled > a {
      &,
      &:hover,
      &:focus {
        color: $navbar-dashboard-link-disabled-color;
        background-color: $navbar-dashboard-link-disabled-bg;
      }
    }
  }

  .navbar-nav {
    // Remove background color from open dropdown
    > .open > a {
      &,
      &:hover,
      &:focus {
        background-color: $navbar-dashboard-link-active-bg;
        color: $navbar-dashboard-link-active-color;
      }
    }

    @media (max-width: map_get($grid-breakpoints, md) - 1px) {
      // Dropdowns get custom display when collapsed
      .open .dropdown-menu {
        > li > a {
          color: $navbar-dashboard-link-color;
          &:hover,
          &:focus {
            color: $navbar-dashboard-link-hover-color;
            background-color: $navbar-dashboard-link-hover-bg;
          }
        }
        > .active > a {
          &,
          &:hover,
          &:focus {
            color: $navbar-dashboard-link-active-color;
            background-color: $navbar-dashboard-link-active-bg;
          }
        }
        > .disabled > a {
          &,
          &:hover,
          &:focus {
            color: $navbar-dashboard-link-disabled-color;
            background-color: $navbar-dashboard-link-disabled-bg;
          }
        }
      }
    }
  }

  // Links in navbars
  //
  // Add a class to ensure links outside the navbar nav are colored correctly.

  .btn-link {
    color: $navbar-dashboard-link-color;
    &:hover,
    &:focus {
      color: $navbar-dashboard-link-hover-color;
      outline: none;
      text-decoration: none;
    }
    &[disabled],
    fieldset[disabled] & {
      &:hover,
      &:focus {
        color: $navbar-dashboard-link-disabled-color;
      }
    }
  }
}


@mixin bg-variant($parent, $color) {
  #{$parent} {
    background-color: $color !important;
    color: $gray !important;
  }
  a#{$parent} {
    @include hover-focus {
      background-color: darken($color, 10%);
    }
  }
}

//
// Code
// -----------------

pre {
  display: block;
  padding: 6.5px;
  margin: 0 0 ($line-height-computed / 2);
  font-size: 13px;
  line-height: $line-height-computed;
  word-break: break-all;
  word-wrap: break-word;
  color: $pre-color;
  background-color: $pre-bg;
  border: 1px solid $pre-border-color;
  border-radius: $border-radius;

  // Account for some code outputs that place code tags in pre tags
  code {
    padding: 0;
    font-size: inherit;
    color: inherit;
    white-space: pre-wrap;
    background-color: transparent;
    border-radius: 0;
  }
}
/* ... */

